# gdr_copy

./: CMakeLists.txt  bench.md
bench/: bench.cpp  bench_gdr_full_gpu_mr.cpp  bench_gdr_mr_cases.cpp  bench_nixl.cpp  nixl_threaded_bench.py
include/: gdr_copy.h
scripts/: build.sh
src/: gdr_copy.cpp
